--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   margin-top: -30px;
-  margin-left: -30px;
+  /* margin-left: -30px; */
 }
 
 .workingplace-item:not(:last-child) {
