--- a/css/styles.css
+++ b/css/styles.css
@@ -289,12 +289,15 @@ img {
   display: flex;
   flex-wrap: wrap;
   margin-top: -30px;
-  /* margin-left: -30px; */
+  margin-left: -30px;
 }
 
-.workingplace-item:not(:last-child) {
-  margin-right: 30px;
-  list-style: none;
+.workingplace-item {
+  margin-top: 30px;
+  margin-left: 30px;
+  flex-basis: calc(100% / 3 - 30px);
+  /* margin-right: 30px;
+  list-style: none; */
 }
 
 /* Наша команда */
